Intro page now reflects the correct notes (even in its blurred state)

--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -113,6 +113,10 @@ main {
   padding: 10px 10px;
   border-bottom: 1px solid rgb(185, 185, 185);
 }
+.note {
+  color: black;
+  text-decoration: none;
+}
 
 .note img {
   width: 15px;
